ãAmend findTodos Logic